xx Dec 2008: 0.6.4 Miek <miek@miek.nl>
 * rdup: Added '%N' to the format string, which prints the
   path, but in case of soft- and hardlinks it will only
   print the link's name not the '-> target' part
 * rdup: rdup.1.in had a long deserved make-over
 * rdup: Print symlinks correctly when there named on the cmd line
 * rdup-tr: Added rdup-tr; a tool to convert rdup output to
   (modified) rdup output, tar, pax or cpio files
 * rdup-tr: Don't compile rdup-tr if libarchive is not found
 * rdup-tr: rdup-tr.1 manpage
 * rdup-up: Added rdup-up; C version of rdup-snap
 * rdup-up: added rdup-up.1 manpage
 * updated rdup-backups.7 as general info about backups with rdup
 * Set the copyright to 2009 already


11 Nov 2009: 0.6.3 Miek <miek@miek.nl>
 * make regular expressions actually work (patch from Crispin Boylan)


03 Nov 2008: 0.6.2 Miek <miek@miek.nl>
 * rdup-utils: completely removed from rdup(-core).
   There is now a seperate svn repos with those tools. 
 * rdup: Added -R switch, which will reverse rdup's output
   This is a depth first output, first the directories
   then the files.
 * rdup: Use libpcre3 for regular expressions, MUCH much more powerfull
   than the POSIX regex previously used. This does add an extra
   dependency for libpcre3 (requested by Sorin Ionescu)
 * rdup: support for named pipe's, sockets and character and
   block devices. The rdup-utils IGNORE these files.
   This overloads the size (%s) in case of block/character
   devices - then it is 'major,minor' numbers
 * rdup: always write the device out with 5 position for the 
   internal filelist. This could also have resulted in too large 
   incrementals.


31 Jul 2008: 0.6.1 Miek <miek@miek.nl>
 * Added support for amazon's S3 service: see s3-rdup
   this is not added to rdup-simple and probably never will,
   but examples are given in the manual page on how
   to use it.
 * crawler.c: removed new_dir argument for dir_crawl
   this would test if a directory is new and if so would