@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2005 - 2007 Miek Gieben
+ * Copyright (c) 2005 - 2009 Miek Gieben
  * See LICENSE for the license
  *
  * Directory crawler
@@ -12,9 +12,11 @@ extern time_t opt_timestamp;
 extern gint opt_verbose;
 extern GSList *pregex_list;
 
+#if 0
 /* xattr.c */
 uid_t read_attr_uid(char *path, uid_t u);
 gid_t read_attr_gid(char *path, gid_t g);
+#endif
 
 static struct r_entry *
 entry_dup(struct r_entry *f)
