@@ -5,6 +5,8 @@ TODO:
   + pcre regexp
 - test -0 for rdup*
 
+- entry dup terug naar crawler
+
 :doc:
 
 :misc:
